--- a/public/css/home/index.css
+++ b/public/css/home/index.css
@@ -2,6 +2,7 @@
   max-width: 55%;
   border: 1px solid #dcdcdc;
   margin: 0 auto;
+  position: relative;
 }
 .post .poster {
   font-size: 15px;
@@ -11,6 +12,13 @@
 .post .postDate {
   font-size: 13px;
   color: #888888;
+}
+.post .postDelete {
+  position: absolute;
+  right: 10px;
+  font-weight: bold;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=index.css.map */
