--- a/resources/sass/home/index.scss
+++ b/resources/sass/home/index.scss
@@ -3,6 +3,7 @@
     max-width: 55%;
     border: 1px solid #dcdcdc;
     margin: 0 auto;
+    position: relative;
     .poster {
         font-size: 15px;
         font-weight: bold;
@@ -11,5 +12,12 @@
     .postDate {
         font-size: 13px;
         color: #888888;
+    }
+    .postDelete {
+        position: absolute;
+        right: 10px;
+        font-weight: bold;
+        font-size: 20px;
+        cursor: pointer;
     }
 }
