フォロー機能

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -56,4 +56,18 @@
   margin-top: 3px;
 }
 
+.nav {
+  position: relative;
+}
+.nav .userSearchForm {
+  position: absolute;
+  top: 50%;
+  right: 130px;
+  transform: translateY(-50%);
+}
+.nav .userSearchForm .userSearch {
+  border-radius: 20px;
+  width: 300px;
+}
+
 /*# sourceMappingURL=common.css.map */
