プロフィール画像作成

--- a/resources/sass/message/index.scss
+++ b/resources/sass/message/index.scss
@@ -7,6 +7,20 @@ overflow: hidden;
   flex-direction: column;
   width: 30%;
   border-right: 1px solid #dcdcdc;
+  .receiverLink{
+    height: 70px;
+    .receiverName {
+      font-weight: bold;
+      padding-top: 15px;
+      padding-left: 30%;
+      font-size: 16px;
+    }
+    .latestMessage {
+      padding-left: 30%;
+      font-size: 13px;
+      color: #797979;
+    }
+  }
 }
 .messageMain {
   width: 68%;
@@ -14,7 +28,15 @@ overflow: hidden;
   flex-direction: column;
   position: relative;
   .messageTitle {
-    height: 15%;
+    height: 10%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    .talkPeople {
+      font-size: 16px;
+      font-weight: bold;
+      margin-left: 30px;
+    }
   }
   .messageBody {
     height: 75%;
