--- a/public/css/message/index.css
+++ b/public/css/message/index.css
@@ -9,6 +9,20 @@
   width: 30%;
   border-right: 1px solid #dcdcdc;
 }
+.message .messageUserBar .receiverLink {
+  height: 70px;
+}
+.message .messageUserBar .receiverLink .receiverName {
+  font-weight: bold;
+  padding-top: 15px;
+  padding-left: 30%;
+  font-size: 16px;
+}
+.message .messageUserBar .receiverLink .latestMessage {
+  padding-left: 30%;
+  font-size: 13px;
+  color: #797979;
+}
 .message .messageMain {
   width: 68%;
   display: flex;
@@ -16,7 +30,15 @@
   position: relative;
 }
 .message .messageMain .messageTitle {
-  height: 15%;
+  height: 10%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
+.message .messageMain .messageTitle .talkPeople {
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: 30px;
 }
 .message .messageMain .messageBody {
   height: 75%;
