--- a/resources/sass/message/index.scss
+++ b/resources/sass/message/index.scss
@@ -9,16 +9,23 @@ overflow: hidden;
   border-right: 1px solid #dcdcdc;
   .receiverLink{
     height: 70px;
-    .receiverName {
-      font-weight: bold;
-      padding-top: 15px;
-      padding-left: 30%;
-      font-size: 16px;
+    overflow: hidden;
+    .messageUserImg {
+      width: 50px;
+      height:50px;
+      border-radius:50%;
+      border: solid 0.5px #C0C0C0;
     }
-    .latestMessage {
-      padding-left: 30%;
-      font-size: 13px;
-      color: #797979;
+    .messageUserData {
+      float: left;
+      .receiverName {
+        font-weight: bold;
+        font-size: 16px;
+      }
+      .latestMessage {
+        font-size: 13px;
+        color: #797979;
+      }
     }
   }
 }
