--- a/public/css/calendar/index.css
+++ b/public/css/calendar/index.css
@@ -21,15 +21,14 @@ table .day {
   text-align: center;
   vertical-align: top;
   border: 1px solid;
+  position: relative;
 }
 table .day form {
   height: 100%;
   width: 100%;
   display: block;
-  position: relative;
-}
-table .day form .lastMonth, table .day form .nextMonth {
-  color: #949593;
+  position: absolute;
+  top: 0;
 }
 table .day form input[type=submit] {
   position: absolute;
@@ -38,6 +37,9 @@ table .day form input[type=submit] {
   height: 100%;
   width: 100%;
   cursor: pointer;
+}
+table .day .lastMonth, table .day .nextMonth {
+  color: #949593;
 }
 
 form {
